--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 :root{
-  --primary: #51e5ffff;
-  --secondary: #440381ff;
-  --accent: #ec368dff;
-  --background: #ffa5a5ff;
-  --disabled: #ffd6c0ff;
+  --primary: #473472;
+  --secondary: #53629E;
+  --accent: #87BAC3;
+  --background: #D6F4ED;
+  --disabled: #BF092F;
 }
