--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 :root{
-  --primary: #473472;
-  --secondary: #53629E;
-  --accent: #87BAC3;
-  --background: #D6F4ED;
-  --disabled: #BF092F;
+  --primary: #2f1847ff;
+  --secondary: #624763ff;
+  --accent: #d63af9ff;
+  --background: #f9b3d1ff;
+  --disabled: #c62e65ff;
 }
