--- a/src/App.css
+++ b/src/App.css
@@ -21,3 +21,67 @@
     margin: 0;
     box-sizing: border-box;
 }
+
+.inputtext{
+    height: 25px;
+    width: 100%;
+}
+
+input, textarea{
+    border: 2px solid var(--background);
+    border-radius: 5px;
+    color: var(--background);
+    background-color: var(--primary);
+}
+
+input::placeholder, textarea::placeholder{
+    color: var(--secondary   );
+    opacity: 1;
+}
+.addButton{
+    border: 2px solid var(--background)
+}
+.addButton:hover{
+    border: 3px solid var(--accent);
+    color: var(--accent);
+
+}
+
+button{
+    border: 2px solid var(--background);
+    border-radius: 10%;
+}
+
+input[type="file"]{
+    display: none;
+}
+
+.custom-file-upload{
+    border: 3px solid var(--background);
+    padding: 3px;
+    border-radius: 5px;
+    font-weight: bold;
+
+}
+
+.custom-file-upload:hover{
+    border: 4px solid var(--accent);;
+    color: var(--accent);
+    
+}
+
+#submit-button{
+    color: var(--background);
+    background-color: var(--secondary);
+    font-weight: bold;
+}
+
+#submit-button:hover{
+    color: var(--accent);
+    border: 3px solid var(--accent);
+}
+
+#submit-button:disabled{
+    color: var(--disabled);
+    border: 2px solid var(--disabled);
+}
