--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,14 @@
 }
 *{box-sizing: border-box;}
 
+.icons{
+    color: var(--background);
+}
+
+.icons:hover{
+    color: var(--accent);
+}
+
 ::-webkit-scrollbar{
     width: 10px;
     
@@ -109,6 +117,10 @@ button:hover{
 }
 
 a{
+    color: var(--background);
+}
+
+a:hover{
     color: var(--accent);
 }
 
@@ -123,6 +135,14 @@ input[type="file"]{
     font-weight: bold;
 
 }
+/*display:"grid", gridTemplateColumns:"150px 1fr", width:"100%", gap:"5px"*/
+.form-row{
+    display: grid;
+    grid-template-columns: 110px 1fr;
+    width: 100%;
+    gap:0;
+}
+
 
 .custom-file-upload:hover{
     border: 4px solid var(--accent);;
