--- a/src/index.css
+++ b/src/index.css
@@ -3,5 +3,5 @@
   --secondary: #624763ff;
   --accent: #d63af9ff;
   --background: #f9b3d1ff;
-  --disabled: #c62e65ff;
+  --disabled: rgb(198, 46, 101);
 }
