--- a/src/App.css
+++ b/src/App.css
@@ -33,6 +33,18 @@
     border: 4px solid rgb(224, 37, 37);
 }
 
+.pfp:hover{
+    
+     transform: scale(1.2);
+}
+
+
+
+.recept:hover{
+    transform: scale(1.03);
+    box-shadow: 1px 1px 10px 3px var(--background);
+}
+
 ::-webkit-scrollbar{
     width: 10px;
     
